--- a/config/crd/bases/milvus.io_milvusclusters.yaml
+++ b/config/crd/bases/milvus.io_milvusclusters.yaml
@@ -822,6 +822,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -868,6 +873,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -905,14 +915,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   dataNode:
                     properties:
@@ -1345,6 +1351,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -1391,6 +1402,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -1428,14 +1444,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   disableMetric:
                     type: boolean
@@ -1950,6 +1962,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -1996,6 +2013,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -2033,14 +2055,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   indexNode:
                     properties:
@@ -2473,6 +2491,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -2519,6 +2542,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -2556,14 +2584,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   metricInterval:
                     type: string
@@ -2998,6 +3022,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -3044,6 +3073,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -3081,14 +3115,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   nodeSelector:
                     additionalProperties:
@@ -3558,6 +3588,11 @@ spec:
                               type: array
                             type: object
                         type: object
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -3619,6 +3654,11 @@ spec:
                         - NodePort
                         - LoadBalancer
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -3656,14 +3696,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   queryCoord:
                     properties:
@@ -4096,6 +4132,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -4142,6 +4183,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -4179,14 +4225,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   queryNode:
                     properties:
@@ -4619,6 +4661,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -4665,6 +4712,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -4702,14 +4754,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   resources:
                     properties:
@@ -5161,6 +5209,11 @@ spec:
                               type: string
                           type: object
                         type: array
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -5207,6 +5260,11 @@ spec:
                         type: string
                       serviceAccountName:
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -5244,14 +5302,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   schedulerName:
                     type: string
@@ -5711,6 +5765,11 @@ spec:
                               type: array
                             type: object
                         type: object
+                      initContainers:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       nodeSelector:
                         additionalProperties:
                           type: string
@@ -5772,6 +5831,11 @@ spec:
                         - NodePort
                         - LoadBalancer
                         type: string
+                      sidecars:
+                        items:
+                          type: object
+                        type: array
+                        x-kubernetes-preserve-unknown-fields: true
                       tolerations:
                         items:
                           properties:
@@ -5809,14 +5873,10 @@ spec:
                           type: object
                         type: array
                       volumes:
-                        allOf:
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
-                        - items:
-                            type: object
-                          x-kubernetes-preserve-unknown-fields: true
+                        items:
+                          type: object
                         type: array
+                        x-kubernetes-preserve-unknown-fields: true
                     type: object
                   tolerations:
                     items:
